# nse-swing-trading

./: .gitignore  README.md  SETUP.md  STRATEGIES.md  auto_research.py  autoresearch.sh  backtest.py  experiment_runner.py  export_equity.py  log_trade.py  prepare.py  program.md  pyproject.toml  results.tsv  run_benchmarks.py  signals.py  strategy.py  trades.csv  workflow.md
.claude/: settings.local.json
.claude/skills/: autoresearch.md
benchmarks/: buy_hold.py  ema_crossover.py  mean_reversion.py  simple_momentum.py
docs/: SETUP.md  STRATEGIES.md
docs/Groww/: Backtesting.md  Historical Data.md  Instruments.md  Introduction.md  Margin.md
research/: program.md  strategy_best.py
strategy_backups/: strategy_exp10.py  strategy_exp11.py  strategy_exp13.py  strategy_exp14.py  strategy_exp15.py  strategy_exp16.py  strategy_exp2.py  strategy_exp3.py  strategy_exp5.py  strategy_exp6.py  strategy_exp7.py  strategy_exp8.py
tools/: experiment_runner.py  export_equity.py  plot_progress.py  run_benchmarks.py
